force-app/main/default/objects/Case/fields/N7_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>N7_Diagnosis__c</fullName>
    <label>N7 Diagnosis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>