force-app/main/default/objects/Case/fields/N7_Model__c.field-meta.xml
<CustomField>
    <fullName>N7_Model__c</fullName>
    <label>N7 Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>