force-app/main/default/objects/Case/fields/N7_Product__c.field-meta.xml
<CustomField>
    <fullName>N7_Product__c</fullName>
    <label>N7 Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>