force-app/main/default/objects/Case/fields/N7_Service_Report__c.field-meta.xml
<CustomField>
    <fullName>N7_Service_Report__c</fullName>
    <label>N7 Service Report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>